# basis-expert-council

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  graph.py  langgraph.json  pyproject.toml
agents/business-advisor/: AGENTS.md
agents/curriculum-advisor/: AGENTS.md
agents/humanities-expert/: AGENTS.md
agents/math-expert/: AGENTS.md
agents/probation-advisor/: AGENTS.md
agents/science-expert/: AGENTS.md
data/: generated_language_g2_g12.json  generated_math_g7_g12.json  generated_math_k_g6.json  generated_reading_k_g12.json  global_events_2025_2026.json  map_questions_bank.json  map_questions_bank_expanded.json  tagged_questions_export.json  tagged_questions_full.jsonl
data/question_banks/: map_import_all.json
data/taxonomy/: ccss_ela.yaml  ccss_math.yaml  misconceptions.yaml  taxonomy_v1.yaml
data/templates/: question_template.csv  question_template.json
debug/skills/: codebase-index.md  local-dev-debug.md
deploy/: 002_user_schema_phase1.sql  DEPLOY_DEV.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.local.yml  init.sql
deploy/scripts/: deploy_dev.sh  start_local.sh
docs/: BASIS 贝赛思入学考试深度研究报告.md  MAP题库扩展生成方案.md  architecture-mermaid.html  architecture.md  basis-overview.html  landing.html  market-research.html  market-research.md  merchai.html  全生命周期面板设计方案.md
docs/HITL用户介入/: Basis-Expert-HITL.md
docs/Sandbox/: sandbox.md
docs/免费学科测评/: assessment-system-design.md  方案评估level1.md
docs/商机分析/: 01-国际教育同步辅导.md  02-留学文书与选校规划.md  03-跨境电商AI运营助手.md  04-标化考试自适应备考.md  05-中小企业财税AI顾问.md  06-企业合同AI审查.md  07-医疗健康管理AI助手.md  08-AI原生SaaS工厂.md  09-地产装修AI顾问.md  AI软件服务商机推演.md  AI降维打击行业商机标的定义.md
docs/多租户架构/: user-schema-design.md
docs/多端设计/: 多端架构.md
docs/学力档案/: 学力档案产品设计文档.md
docs/市场调研/: basis-overview.html  market-research.md  中国国际教育体系全景.md
docs/测评系统/: 标签系统命令指南.md  测评系统完整架构体系.md  测评系统架构图.html  真题库系统使用指南.md  (+1 more)
frontend/: README.md  next.config.ts  package.json  tailwind.config.mjs
tests/: a2ui_agent_test_results.json  a2ui_test_results.json  test_a2ui_agent_e2e.py  test_a2ui_e2e.py  test_full_flow.py  test_results.json  test_sms_routes.py
(+239 files in other folders)
